"fixed" api data func -> contact items are now visible on init render

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 .App {
   text-align: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: space-between;
   margin: 20px 0;
